# WrenJIT

./: .gitignore  CMakeLists.txt  README.md
bench/: bench_fib.wren  bench_for.wren  bench_sum.wren  runner.c
bench/c_equivalents/: fib.c  sum.c
src/jit/: wren_jit.c  wren_jit.h  wren_jit_codegen.c  wren_jit_codegen.h  wren_jit_ir.c  wren_jit_ir.h  wren_jit_memory.c  wren_jit_memory.h  wren_jit_opt.c  wren_jit_opt.h  wren_jit_opt_guardelim.c  wren_jit_opt_iv.c  wren_jit_regalloc.c  wren_jit_regalloc.h  wren_jit_snapshot.c  wren_jit_snapshot.h  wren_jit_trace.c  wren_jit_trace.h  wren_jit_trace_widen.c  wren_jit_trace_widen.h
test/: test_ir.c  test_jit.c
